Fix search bar layout: stretch choices.js widget to fill flex container

--- a/assets/css/inputBar.css
+++ b/assets/css/inputBar.css
@@ -93,6 +93,11 @@
 }
 
 /* The div containing the choices.js widget */
-#searchBar{
+#searchBar {
 	flex-grow: 1;
+	min-width: 0;
+}
+
+#searchBar .choices {
+	width: 100%;
 }
