--- a/docs/main.css
+++ b/docs/main.css
@@ -1079,8 +1079,13 @@ tfoot td {
 }
 
 /* The div containing the choices.js widget */
-#searchBar{
+#searchBar {
 	flex-grow: 1;
+	min-width: 0;
+}
+
+#searchBar .choices {
+	width: 100%;
 }
 /******************************************************************************
      * CSS for the creadits	
